--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "memory-cache": "^0.2.0",
     "next": "13.2.1",
     "react": "18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.3",
     "typescript": "4.9.5",
