--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "sharp": "^0.31.3",
     "typescript": "4.9.5",
     "zustand": "^4.3.7"
